--- a/src/App.css
+++ b/src/App.css
@@ -40,12 +40,17 @@ h2 {
   flex-direction: column;
 }
 
+.item-inspect h1 {
+  margin-bottom: 2rem;
+}
+
 #item-holder {
   width: 60%;
   height: 600px;
   background: transparent;
-  border: 1px solid black;
-  margin-bottom: 1rem;
+  border: 5px solid black;
+  margin-bottom: 1.5rem;
+  border-radius: 1rem;
 }
 
 #canvas-item, #canvas-game {
@@ -55,6 +60,68 @@ h2 {
 }
 
 #canvas-item {
-  background-color: lightcyan;
+  background-image: url('/public/assets/white-stone.jpg');
   opacity: 1;
+}
+
+.highlighted{
+  color: black;
+  text-shadow: 2px 2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff, -2px -2px 0 #fff, 2px 0px 0 #fff, 0px 2px 0 #fff, -2px 0px 0 #fff, 0px -2px 0 #fff;
+}
+
+#mobile-screen-overlay {
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position:fixed;
+  z-index: 1005;
+  background: black;
+  color: white;
+  padding: 2rem ;
+  text-align: center;
+}
+
+#mobile-screen-overlay h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+}
+
+#mobile-screen-overlay a {
+  color: white;
+  font-size: 1.5rem;
+}
+
+#main-menu {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  width: 350px;
+  height: 400px;
+  background: url('/public/assets/papyrus.jpg');
+  color: black;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 1rem;
+  opacity: 0.9;
+  box-shadow: 0 0 1rem 0.2px rgb(65, 21, 21);
+  text-align: left;
+}
+
+#main-menu hr {
+    width: 100%;
+    height: 2px;
+    border: none;
+    background-image: linear-gradient(to right, rgba(10, 5, 5, 0), rgb(0, 0, 0), rgba(255, 255, 255, 0.055));
+}
+
+@media  screen and (max-width: 1200px) {
+  #mobile-screen-overlay {
+    display: block;
+  }
 }
