--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,19 @@ body {
   color: black;
 }
 
-.dot {
+#center-menu{
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 45%;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.dot {
   width: 10px;
   height: 10px;
   border-radius: 50%;
@@ -90,5 +99,12 @@ body {
   padding: 1rem 2rem;
   border-radius: 1rem;
   max-width: 300px;
+  text-decoration: none;
+  transition: background 0.4s cubic-bezier(.37,.76,.87,.89);
+}
+
+.return-btn a:hover {
+  background: white;
+  color: black;
 }
 
